--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   --color-3b4149:#3b4149;
   --color-febd69:#febd69;
   --color-232f3e:#232f3e;
+  --color-bf4800:#bf4800;
 }
 
 body{
@@ -23,6 +24,9 @@ a {
   box-shadow: none;
   border-color: inherit;
 }
+.gap-8{
+  gap:8px;
+}
 .gap-10{
   gap: 10px;
 }
@@ -32,6 +36,31 @@ a {
 .gap-30{
   gap: 30px;
 }
+.button{
+  background-color: var(--color-232f3e);
+  color: white;
+  font-size: 14px;
+  padding: 13px 33px;
+  border-radius: 30px;
+}
+.button:hover{
+  background-color: var(--color-febd69);
+  color: #131921;
+}
+.small-button{
+  background-color: var(--color-232f3e);
+  color: white;
+  font-size: 12px;
+  padding: 10px 30px;
+  border-radius: 90px;
+  margin: 1px;
+ 
+}
+.small-button:hover{
+  background-color: var(--color-febd69);
+  color: #131f21;
+}
+
 /*Header part*/
 .header-top-strip{
   border-bottom:1px solid var(--color-3b4149) ;
@@ -97,3 +126,68 @@ footer .input-group-text{
   padding: 8px 17px;
 }
 /*Footer part end*/
+
+/*Home page start*/
+.main-banner-content{
+  top:15%;
+  left: 5%;
+}
+.main-banner-content h4{
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+.main-banner-content h5{
+  font-size: 52px;
+  line-height: 64px;
+  letter-spacing: -2px;
+  font-weight: 500;
+  padding: 0;
+  text-transform: none;
+  color: rgb(0, 0, 0);
+}
+.main-banner-content p{
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.4;
+  color: var(--color-131921);
+}
+
+.small-banner-content{
+  top:15%;
+  left: 10%;
+}
+.small-banner-content h4{
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+.small-banner-content h5{
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -1px;
+  font-weight: 500;
+  padding: 0;
+  text-transform: none;
+  color: rgb(0, 0, 0);
+}
+.small-banner-content p{
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.4;
+  color: var(--color-131921);
+}
+.small-banner{
+  width: 49%;
+  
+
+}
+/*Home page end*/
