--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,27 @@
   --color-febd69:#febd69;
   --color-232f3e:#232f3e;
   --color-bf4800:#bf4800;
+  --color-f5f5f7:#f5f5f7;
+  --color-ededed:#ededed;
+  --color-777777:#777777;
+  --color-1c1c1b:#1c1c1b;
+}
+.section-heading{
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+.card-wrapper{
+  background-color: white;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
 }
 
 body{
   font-family: 'Rubik', sans-serif;
+
+
 }
 
 a {
@@ -23,6 +40,9 @@ a {
 .form-control:focus{
   box-shadow: none;
   border-color: inherit;
+}
+.gap-5{
+  gap:5px;
 }
 .gap-8{
   gap:8px;
@@ -61,7 +81,7 @@ a {
   color: #131f21;
 }
 
-/*Header part*/
+/* Header part */
 .header-top-strip{
   border-bottom:1px solid var(--color-3b4149) ;
   background-color: var(--color-131921);
@@ -110,7 +130,7 @@ a {
   color: var(--color-febd69) !important;
 }
 
-/*Header part end*/
+/* Header part end */
 
 /*Footer part Start*/
 footer{
@@ -125,9 +145,9 @@ footer .input-group-text{
   color: white;
   padding: 8px 17px;
 }
-/*Footer part end*/
+/* Footer part end */
 
-/*Home page start*/
+/* Home page start */
 .main-banner-content{
   top:15%;
   left: 5%;
@@ -190,4 +210,254 @@ footer .input-group-text{
   
 
 }
-/*Home page end*/
+/* Home wrapper 2*/
+.home-wrapper-2{
+  background-color: var(--color-f5f5f7);
+}
+
+/* Home wrapper 2 end */
+
+/* categories section */
+.categories{
+  background-color: white;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 30px;
+  border-radius: 10px;
+}
+.categories>div{
+  width: 24;
+  padding: 10px 80px 0px 30px;
+}
+.categories > div > div {
+  width: 90%;
+}
+
+.categories > div:nth-child(1),
+.categories > div:nth-child(2),
+.categories > div:nth-child(3){
+  border-right: 1px solid #c2c2c2;
+}
+
+.categories > div:nth-child(2),
+.categories > div:nth-child(3),
+.categories > div:nth-child(4){
+  border-left: 0.5px solid #f0f0f0;
+}
+/* categories section end */
+
+
+/* Home page end */
+
+
+/* Blog Part */
+.blog-card{
+  background-color: white;
+  border-radius: 10px;
+}
+
+.blog-card img{
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+
+}
+
+.blog-content{
+  padding: 15px;
+}
+.blog-content p.date{
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-weight: 400;
+  color: var(--color-777777);
+  padding: 0;
+}
+.blog-content h5{
+  font-size: 18px;
+  color: var(--color-131921);
+}
+.blog-content p.desc{
+  font-size: 13px;
+  line-height: 22px;
+  color: var(--color-777777);
+}
+/* Blog Part end */
+
+
+/* Product card */
+.product-card{
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 10px #0000001a;
+  width: 100%;
+}
+.product-card .product-image{
+  height: 270px;
+}
+.product-card .product-image img{
+  object-fit: contain;
+  
+}
+
+.product-card .product-image>img:last-child{
+  display: none;
+}
+.product-card:hover .product-image>img:nth-child(1){
+  display: none;
+
+}
+.product-card:hover .product-image>img:last-child{
+  display: block;
+  
+}
+.product-card:hover .action-bar{
+  right: 15px;
+}
+.product-card .product-details h6 {
+  color: var(--color-bf4800);
+  font-size: 13px;
+
+}
+.product-card .product-details h5 {
+  font-size: 15px;
+  color: var(--color-1c1c1b);
+}
+.product-card .product-details p.price {
+font-size: 16px;
+color: var(--color-1c1c1b);
+
+}
+.product-card p.description{
+  font-size: 13px;
+  color: var(--color-777777);
+  margin-right: 20px;
+}
+.action-bar{
+  top: 10%;
+  right: -23px;
+  transition: 0.3s;
+}
+.wishlist-icon{
+  top: 2%;
+  right: 15px;
+}
+/* Product card end */
+
+/* Special Product card */
+.special-product-card{
+  padding: 20px 10px;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 0 10px #0000001a;
+}
+.special-product-card .badge{
+  background-color: #c918181a;
+}
+
+/* Special Product card end */
+
+/* Our Store */
+
+.filter-card{
+  background-color: white;
+  border-radius: 10px;
+  padding: 15px 15px 25px;
+}
+.filter-title{
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  color: var(--color-1c1c1b);
+  margin-bottom: 20px;
+}
+.filter-card ul, .filter-card .form-check-label{
+  list-style-type: none;
+  font-size: 13px;
+  line-height: 30px;
+  color: var(--color-777777);
+  cursor: pointer;
+}
+.filter-card .form-check-input:focus{
+  box-shadow: none;
+  border-color: rgb(0, 238, 255);
+}
+.filter-card .form-check-input:checked{
+  background-color: rgb(0, 238, 255);
+}
+.sub-title{
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--color-1c1c1b);
+  margin-bottom: 15px;
+  margin-top: 20px;
+}
+.colors{
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+
+}
+.colors li{
+  width: 20px;
+  height: 20px;
+  background-color: rgb(225, 0, 255);
+  border-radius: 50%;
+}
+.random-products h5{
+  font-size: 14px;
+  margin-bottom: 8px;
+
+}
+.random-products:first-child{
+  border-bottom: 1px solid #c5c5c5;
+}
+.filter-sort-grid{
+  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+}
+.grid img{
+  width: 30px;
+  height: 30px;
+  background-color: #e6e6e6;
+  padding: 8px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.gr-12{
+  width: 100%;
+}
+.gr-6{
+  width: 49%;
+}
+.gr-4{
+  width: 32%;
+}
+.gr-3{
+  width: 24%;
+}
+.gr-12 .product-card{
+  display: flex;
+  gap: 20px;
+}
+.gr-6 .product-card{
+  width: 100%;
+}
+.gr-6 .product-image img{
+  margin: auto;
+  display: block;
+}
+.gr-12 .product-card .product-image{
+  width: 270px;
+}
+.gr-12 .product-card .product-image{
+  height:auto;
+}
+.gr-12 .action-bar{
+  top: 17%;
+}
+/* Our Store end */
