--- a/src/App.css
+++ b/src/App.css
@@ -253,6 +253,7 @@ footer .input-group-text{
 .blog-card{
   background-color: white;
   border-radius: 10px;
+  box-shadow: 0 0 10px #0000001a;
 }
 
 .blog-card img{
