--- a/src/App.css
+++ b/src/App.css
@@ -283,6 +283,21 @@ footer .input-group-text{
   line-height: 22px;
   color: var(--color-777777);
 }
+.single-blog-card a{
+  font-size: 17px;
+  color: var(--color-777777);
+  margin-bottom: 20px;
+}
+.single-blog-card h3{
+font-size: 24px;
+font-weight: 600;
+color: var(--color-1c1c1b);
+}
+.single-blog-card p{
+  color: var(--color-777777);
+  font-size: 14px;
+
+}
 /* Blog Part end */
 
 
@@ -462,3 +477,116 @@ color: var(--color-1c1c1b);
   top: 17%;
 }
 /* Our Store end */
+
+/* Contact Page */
+.contact-inner-wrapper{
+  padding: 30px 20px;
+  border-radius: 15px;
+  background-color: white;
+  gap: 15px;
+}
+.contact-inner-wrapper>div{width: 48%;}
+
+.contact-title{
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 35px;
+  text-align: left;
+
+}
+.contact-inner-wrapper form .form-control{
+  background-color: var(--color-f5f5f7);
+  border-radius: 10px;
+  border-color: transparent;
+  padding: 10px;
+}
+.contact-inner-wrapper ul{
+  list-style: none;
+}
+.contact-inner-wrapper address,
+.contact-inner-wrapper a,
+.contact-inner-wrapper p {
+  color: var(--color-777777);
+}
+/* Contact Page end */
+
+/* Compare Product Page */
+.compare-product-card,
+.wishlist-card{
+  padding: 20px 15px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #0000001a;
+}
+.compare-product-card .cross,
+ .wishlist-card .cross{
+  top: 15px;
+  right: 15px;
+  width: 25px;
+  padding: 3px;
+  cursor: pointer;
+}
+.compare-product-details h5.title,
+.wishlist-card h5.title
+{
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 500;
+  color: var(--color-1c1c1b);
+}
+.compare-product-details h6.price,
+.wishlist-card h6.price{
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
+}
+.compare-product-card .product-detail{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0px;
+  border-top: 1px solid var(--color-f5f5f7);
+}
+/* Compare Product Page end */
+
+
+/* Auth card */
+.auth-card{
+  padding: 20px;
+  background-color: white;
+  width: 500px;
+  margin: 30px auto;
+  border-radius: 10px;
+}
+.auth-card h3{
+  font-size: 19px;
+  font-weight: 500;
+  color: var(--color-777777);
+}
+.auth-card p{
+  font-size: 13px;
+  color: var(--color-777777);
+}
+.auth-card .form-control{
+  height: 50px;
+  background-color: var(--color-f5f5f7);
+  color: var(--color-777777);
+  font-size: 15px;
+  border-radius: 6px;
+  border-color: transparent;
+}
+.auth-card a{
+  font-size: 15px;
+  font-weight: 400;
+  color: var(--color-777777);
+}
+.auth-card .signup{
+  background-color: var(--color-febd69);
+  color: var(--color-131921);
+  font-size: 15px;
+}
+.auth-card .signup:hover{
+  background-color: var(--color-232f3e);
+  color:white;
+}
+/* Auth card end */
