--- a/src/App.css
+++ b/src/App.css
@@ -829,3 +829,7 @@ margin: 0px;
   color: var(--color-777777);
 }
 /* Shipping page ends here */
+.error{
+  color: rgb(199, 7, 7);
+  font-size: 12px;
+}
