--- a/src/App.css
+++ b/src/App.css
@@ -838,3 +838,9 @@ margin: 0px;
   color: rgb(199, 7, 7);
   font-size: 12px;
 }
+
+.list-order{
+  background-image: linear-gradient(to right, rgb(94, 207, 207), rgb(223, 121, 236));
+  border-radius: 10px;
+  font-size: 16px;
+}
