--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,13 @@
   padding: 15px;
 }
 
+.bcard-wrapper{
+  background-color: white;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
+ 
+}
+
 body{
   font-family: 'Rubik', sans-serif;
 
